syntax = "proto3";
package pb;

option go_package = "github.com/unawaretub86/graph-qrcp-go-ecommerce/pb";

service AccountService {
    rpc PostAccount(PostAccountRequest) returns (PostAccountResponse);
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
    rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);
}

message Account {
    string id = 1;
    string name = 2;
}

message PostAccountRequest {
    string name = 1;
}

message PostAccountResponse {
    Account Account = 1;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountResponse {
    Account Account = 1;
}

message GetAccountsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetAccountsResponse {
    // Defines an array of Account objects. Used to return multiple accounts in the response
    repeated Account Accounts = 1;
}

message PotsAccountRequest {

}

message PotsAccountResponse {

}
